--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>The toto</title>
+        <title>mini-login</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
     </head>
